--- a/dapp/package.json
+++ b/dapp/package.json
@@ -9,8 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@web3-onboard/core": "^2.21.6",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@web3-onboard/coinbase": "^2.2.7",
+    "@web3-onboard/dcent": "^2.2.8",
+    "@web3-onboard/fortmatic": "^2.0.19",
+    "@web3-onboard/frontier": "^2.0.4",
+    "@web3-onboard/gnosis": "^2.2.2",
+    "@web3-onboard/infinity-wallet": "^2.0.4",
     "@web3-onboard/injected-wallets": "^2.10.16",
+    "@web3-onboard/keepkey": "^2.3.8",
+    "@web3-onboard/keystone": "^2.3.8",
+    "@web3-onboard/ledger": "^2.6.0",
+    "@web3-onboard/magic": "^2.1.7",
+    "@web3-onboard/portis": "^2.1.7",
+    "@web3-onboard/react": "^2.8.17",
+    "@web3-onboard/sequence": "^2.0.8",
+    "@web3-onboard/taho": "^2.0.5",
+    "@web3-onboard/trezor": "^2.4.4",
+    "@web3-onboard/trust": "^2.0.4",
+    "@web3-onboard/walletconnect": "^2.5.5",
+    "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
@@ -19,7 +41,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "daisyui": "^4.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
